--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/cashier": "^12.10",
         "laravel/framework": "^8.12",
         "laravel/scout": "^8.6",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
