--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
         "php": "^7.3|^8.0",
         "algolia/algoliasearch-client-php": "^2.7",
         "cartalyst/stripe": "~2.0",
+        "darryldecode/cart": "~4.0",
+        "fakerphp/faker": "^1.9.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/cashier": "^12.10",
         "laravel/framework": "^8.12",
         "laravel/scout": "^8.6",
-        "laravel/tinker": "^2.5",
-        "fakerphp/faker": "^1.9.1"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
