--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,14 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/cashier": "^12.10",
         "laravel/framework": "^8.12",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/scout": "^8.6",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "nexmo/laravel": "^2.4",
+        "spatie/laravel-medialibrary": "^9.0.0"
+    },
+    "provide": {
+        "ext-exif": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
