--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,15 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hardevine/shoppingcart": "^2.9",
         "laravel/cashier": "^12.10",
         "laravel/framework": "^8.12",
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/scout": "^8.6",
         "laravel/tinker": "^2.5",
         "nexmo/laravel": "^2.4",
-        "spatie/laravel-medialibrary": "^9.0.0"
+        "spatie/laravel-medialibrary": "^9.0.0",
+      "ext-http": "*"
     },
     "provide": {
         "ext-exif": "*"
